修复检索不到相关知识的bug（调低至合理阈值并设置threshold）